# projeto-aulas/src/routes/login.ts
@@ -4,6 +4,7 @@ import LoginController from "../controllers/login";
 const router = Router();
 let ctrl = new LoginController();
 
-router.post("/", ctrl.login);
+router.post("/login", ctrl.login);
+router.post("/logout", ctrl.logout);
 
 export default router;
